# meeting-cost-calculator

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yaml
meeting_cost_calculator/: frontend.py
meeting_cost_calculator/model/: meeting.py
