[tool.poetry]
name = "meeting-cost-calculator"
version = "0.1.0"
description = ""
authors = ["kahnwong <karn@karnwong.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.6.2"
streamlit = "1.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
